Update 'ugkoht3cs-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:d91748b4246017787cf7b9b89574448eecebb376@sha256:f7a2a2352f5fef38afccb701fa6d6b189704aa4622f9ab07e9ef1eaeb3c6cf0f

--- a/components/ugkoht3cs-python/overlays/development/deployment-patch.yaml
+++ b/components/ugkoht3cs-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ugkoht3cs-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:d91748b4246017787cf7b9b89574448eecebb376@sha256:f7a2a2352f5fef38afccb701fa6d6b189704aa4622f9ab07e9ef1eaeb3c6cf0f
+          name: container-image
